Support multiple monitors in same workflow, don't stop execution if detector is invalid for streaming
Signed-off-by: Chase Engelbrecht <engechas@amazon.com>